[tool.poetry]
name = "redis-python"
version = "0.1.0"
description = ""
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
