[tool.poetry]
name = "redis-python"
version = "0.1.0"
description = ""
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [
{include = "main.py"}
]


[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
